package Model;

import se.mau.DA343A.VT25.assignment1.Direction;

import java.awt.image.BufferedImage;

public interface IElement {
    /***
     * Interface that provides the element class with the rotateImage-method
     * @return a rotated icon
     */
    BufferedImage rotateImage();

}
